--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "html-to-image": "^0.1.1",
     "materialize-css": "^1.0.0",
     "nes.css": "2.2.0",
     "rxjs": "~6.5.5",
