--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
   #   branches: [ master ]
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  
+
   build:
     name: Build
     # The type of runner that the job will run on
@@ -34,7 +34,7 @@ jobs:
         run: npm run test-ci
       # Runs a set of commands to build
       - name: Build
-        run: npm run build --prod
+        run: npm run build:prod
       # sotre the artifact
       - name: Archive Production Artifact
         uses: actions/upload-artifact@master
