Added wgj-website configuration for repo and hosting.

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/wgj-website-2022",
+    "public": "dist/wgj-website",
     "ignore": [
       "firebase.json",
       "**/.*",
