--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WGJ_WEBSITE_2022 }}'
-          projectId: wgj-website-2022
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_WGJ_BOLIVIA }}'
+          projectId: wgj-bolivia
