--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "wgj-website-2022": {
+    "wgj-website": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -39,7 +39,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/wgj-website-2022",
+            "outputPath": "dist/wgj-website",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -91,10 +91,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "wgj-website-2022:build:production"
+              "browserTarget": "wgj-website:build:production"
             },
             "development": {
-              "browserTarget": "wgj-website-2022:build:development"
+              "browserTarget": "wgj-website:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -102,7 +102,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "wgj-website-2022:build"
+            "browserTarget": "wgj-website:build"
           }
         },
         "test": {
