Added firebase and prettier configuration.

--- a/angular.json
+++ b/angular.json
@@ -39,7 +39,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/wgj-website",
+            "outputPath": "dist/wgj-website/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
@@ -114,6 +114,59 @@
             "styles": ["src/styles.scss"],
             "scripts": []
           }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/wgj-website/server",
+            "main": "server.ts",
+            "tsConfig": "tsconfig.server.json",
+            "inlineStyleLanguage": "scss"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false,
+              "vendorChunk": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "configurations": {
+            "development": {
+              "browserTarget": "wgj-website:build:development",
+              "serverTarget": "wgj-website:server:development"
+            },
+            "production": {
+              "browserTarget": "wgj-website:build:production",
+              "serverTarget": "wgj-website:server:production"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "routes": ["/"]
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "wgj-website:build:production",
+              "serverTarget": "wgj-website:server:production"
+            },
+            "development": {
+              "browserTarget": "wgj-website:build:development",
+              "serverTarget": "wgj-website:server:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
