--- a/package.json
+++ b/package.json
@@ -6,33 +6,50 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run wgj-website:serve-ssr",
+    "serve:ssr": "node dist/wgj-website/server/main.js",
+    "build:ssr": "ng build && ng run wgj-website:server",
+    "prerender": "ng run wgj-website:prerender",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^16.1.0",
-    "@angular/common": "^16.1.0",
-    "@angular/compiler": "^16.1.0",
-    "@angular/core": "^16.1.0",
-    "@angular/forms": "^16.1.0",
-    "@angular/platform-browser": "^16.1.0",
-    "@angular/platform-browser-dynamic": "^16.1.0",
-    "@angular/router": "^16.1.0",
+    "@angular/animations": "^16.1.3",
+    "@angular/common": "^16.1.3",
+    "@angular/compiler": "^16.1.3",
+    "@angular/core": "^16.1.3",
+    "@angular/forms": "^16.1.3",
+    "@angular/platform-browser": "^16.1.3",
+    "@angular/platform-browser-dynamic": "^16.1.3",
+    "@angular/platform-server": "^16.1.3",
+    "@angular/router": "^16.1.3",
+    "@nguniversal/express-engine": "^16.1.1",
+    "express": "^4.15.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.1.1",
-    "@angular/cli": "~16.1.1",
-    "@angular/compiler-cli": "^16.1.0",
+    "@angular-devkit/build-angular": "^16.1.3",
+    "@angular/cli": "~16.1.3",
+    "@angular/compiler-cli": "^16.1.3",
+    "@nguniversal/builders": "^16.1.1",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^16.11.7",
+    "husky": "^8.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^13.2.3",
+    "prettier": "2.8.8",
     "typescript": "~5.1.3"
+  },
+  "lint-staged": {
+    "*.{js,css,md}": "prettier --write"
   }
 }
