--- a/angular.json
+++ b/angular.json
@@ -51,7 +51,7 @@
               "src/robots.txt",
               "src/.well-known"
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss", "node_modules/aos/dist/aos.css"],
             "scripts": []
           },
           "configurations": {
@@ -111,7 +111,7 @@
               "src/robots.txt",
               "src/.well-known"
             ],
-            "styles": ["src/styles.scss"],
+            "styles": ["src/styles.scss", "node_modules/aos/dist/aos.css"],
             "scripts": []
           }
         },
