--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-server": "^16.1.3",
     "@angular/router": "^16.1.3",
     "@nguniversal/express-engine": "^16.1.1",
+    "aos": "^2.3.4",
     "express": "^4.15.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,6 +36,7 @@
     "@angular/cli": "~16.1.3",
     "@angular/compiler-cli": "^16.1.3",
     "@nguniversal/builders": "^16.1.1",
+    "@types/aos": "^3.0.4",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^16.11.7",
