--- a/angular.json
+++ b/angular.json
@@ -111,7 +111,7 @@
               "src/robots.txt",
               "src/.well-known"
             ],
-            "styles": ["src/styles.scss", "node_modules/aos/dist/aos.css"],
+            "styles": ["src/styles.scss", "node_modules/aos/dist/aos.css", "node_modules/nes.css/css/nes.min.css"],
             "scripts": []
           }
         },
@@ -170,5 +170,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
