--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nguniversal/express-engine": "^16.1.1",
     "aos": "^2.3.4",
     "express": "^4.15.2",
+    "html-to-image": "^1.11.11",
+    "nes.css": "^2.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
